atualizacão de foto resumo e tecnologias

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
-  --bs-orange: #264dcf;
+  --bs-orange: #00008b;
   --bs-yellow: #ffc107;
   --bs-green: #198754;
   --bs-teal: #20c997;
@@ -33,7 +33,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #264dcf;
+  --bs-primary: #00008b;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -237,7 +237,7 @@ sup {
 }
 
 a {
-  color: #264dcf;
+  color: #00008b;
   text-decoration: underline;
 }
 a:hover {
@@ -2508,8 +2508,8 @@ textarea.form-control-lg {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.25);
 }
 .form-check-input:checked {
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10l3 3l6-6'/%3e%3c/svg%3e");
@@ -2518,8 +2518,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2596,7 +2596,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #264dcf;
+  background-color: #00008b;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2625,7 +2625,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #264dcf;
+  background-color: #00008b;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3033,8 +3033,8 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #000;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .btn-primary:hover {
   color: #000;
@@ -3057,8 +3057,8 @@ textarea.form-control-lg {
 }
 .btn-primary:disabled, .btn-primary.disabled {
   color: #000;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 
 .btn-secondary {
@@ -3272,27 +3272,27 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  color: #264dcf;
-  border-color: #264dcf;
+  color: #00008b;
+  border-color: #00008b;
 }
 .btn-outline-primary:hover {
   color: #000;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .btn-check:focus + .btn-outline-primary, .btn-outline-primary:focus {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
 }
 .btn-check:checked + .btn-outline-primary, .btn-check:active + .btn-outline-primary, .btn-outline-primary:active, .btn-outline-primary.active, .btn-outline-primary.dropdown-toggle.show {
   color: #000;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .btn-check:checked + .btn-outline-primary:focus, .btn-check:active + .btn-outline-primary:focus, .btn-outline-primary:active:focus, .btn-outline-primary.active:focus, .btn-outline-primary.dropdown-toggle.show:focus {
   box-shadow: 0 0 0 0.25rem rgba(189, 93, 56, 0.5);
 }
 .btn-outline-primary:disabled, .btn-outline-primary.disabled {
-  color: #264dcf;
+  color: #00008b;
   background-color: transparent;
 }
 
@@ -3473,7 +3473,7 @@ textarea.form-control-lg {
 
 .btn-link {
   font-weight: 400;
-  color: #264dcf;
+  color: #00008b;
   text-decoration: underline;
 }
 .btn-link:hover {
@@ -3782,7 +3782,7 @@ textarea.form-control-lg {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #264dcf;
+  background-color: #00008b;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #adb5bd;
@@ -3823,7 +3823,7 @@ textarea.form-control-lg {
 }
 .dropdown-menu-dark .dropdown-item.active, .dropdown-menu-dark .dropdown-item:active {
   color: #fff;
-  background-color: #264dcf;
+  background-color: #00008b;
 }
 .dropdown-menu-dark .dropdown-item.disabled, .dropdown-menu-dark .dropdown-item:disabled {
   color: #adb5bd;
@@ -3945,7 +3945,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #264dcf;
+  color: #00008b;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -4002,7 +4002,7 @@ textarea.form-control-lg {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #264dcf;
+  background-color: #00008b;
 }
 
 .nav-fill > .nav-link,
@@ -4806,7 +4806,7 @@ textarea.form-control-lg {
 .page-link {
   position: relative;
   display: block;
-  color: #264dcf;
+  color: #00008b;
   text-decoration: none;
   background-color: #fff;
   border: 1px solid #dee2e6;
@@ -4837,8 +4837,8 @@ textarea.form-control-lg {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -5034,7 +5034,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #264dcf;
+  background-color: #00008b;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5117,8 +5117,8 @@ textarea.form-control-lg {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #264dcf;
-  border-color: #264dcf;
+  background-color: #00008b;
+  border-color: #00008b;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6437,7 +6437,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #264dcf;
+  color: #00008b;
 }
 .link-primary:hover, .link-primary:focus {
   color: #ca7d60;
@@ -6890,7 +6890,7 @@ textarea.form-control-lg {
 }
 
 .border-primary {
-  border-color: #264dcf !important;
+  border-color: #00008b !important;
 }
 
 .border-secondary {
@@ -11365,7 +11365,7 @@ p.lead {
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
-    border: 0.5rem solid rgba(255, 255, 255, 0.2);
+    border: 0.2rem solid rgba(255, 255, 255, 0.2);
   }
   #sideNav .navbar-collapse {
     display: flex;
@@ -11401,7 +11401,7 @@ p.lead {
   margin-right: 0;
 }
 .social-icons .social-icon:hover {
-  background-color: #264dcf;
+  background-color: #00008b;
 }
 
 .dev-icons {
@@ -11434,3 +11434,4 @@ section.resume-section .resume-section-content {
     padding-bottom: 5rem;
   }
 }
+
